# leaderboard

./: .gitignore  LICENSE  Makefile  README.md  app.py  llm-perf-leaderboard-1xA10.csv  pyproject.toml  requirements.txt  update_dynamic.py  upload.sh
data/: bgb-leaderboard-gpt-4-turbo-2024-04-09.csv  bgb-leaderboard-gpt-4-turbo-2024-04-09.pkl  bgb-leaderboard-prometheus-bgb-8x7b-v2.0.csv  bgb-leaderboard-prometheus-bgb-8x7b-v2.0.pkl  eval_by_gpt-4-turbo-2024-04-09.csv  eval_by_prometheus-bgb-8x7b-v2.0.csv  llm-perf-leaderboard-1xA10.csv  llm-perf-leaderboard-1xA100.csv
src/: assets.py  attention.py  content.py  envs.py  kernels.py  leaderboard.py  llm_perf.py  map.py  model_card.py  model_list.py  panel.py  utils.py
src/display/: about.py  css_html_js.py  utils.py
src/leaderboard/: filter_models.py
src/scripts/: create_request_file.py  update_all_request_files.py
src/submission/: check_validity.py  submit.py
src/tools/: plots.py
